--- a/client/src/styles/chat.css
+++ b/client/src/styles/chat.css
@@ -65,30 +65,31 @@
 
 .messageIncoming{
     display: flex;
+    flex-direction: row;
     border-top: black 1px solid;
     background-color: white;
     margin-bottom: 0px;
     padding: 20px;
-    text-align: left;
     white-space: pre-wrap;
 }
 
 .messageOutgoing{
-    display: block;
+    display: flex;
+    flex-direction: row-reverse;
     background-color: white;
     margin-bottom: 0px;
     padding: 20px;
-    text-align: right;
     border-style: solid;
     border-image: linear-gradient(to right, white, #225633, white) 1;
     white-space: pre-wrap;
 }
 
 .messageAvatar{
-    display: block;
-    width: 5rem;
-    height: 5rem;
-    margin-bottom: 1px;
+    float: left; 
+    width: 50px; 
+    height: 50px; 
+    margin-right: 10px;
+    border-radius: 50%; 
 }
 
 .attachIcon{
@@ -116,3 +117,4 @@
 .tooltipIcon{
     padding: 0px;
 }
+
