--- a/client/src/styles/report_assistant.css
+++ b/client/src/styles/report_assistant.css
@@ -36,7 +36,8 @@
     padding-bottom: 20px;
     padding-left: 20px;
     border-radius: 25px;
-    border: 4px solid #225633;
+    border: 1px solid #225633;
+    box-shadow: 3px 3px 3px rgba(0,0,0,0.25);
     scroll-snap-align: center;
 }
 
@@ -111,7 +112,7 @@
     padding: 0.375rem 0.75rem;
     font-size: 1rem;
     font-weight: 400;
-    line-height: 1.5;
+    line-height: 1.4;
     color: var(--bs-body-color);
     text-align: center;
     white-space: nowrap;
@@ -191,3 +192,19 @@
 .generateCommentWand:hover {
     color: var(--bs-primary);
 }
+
+.custom-file-upload {
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+    background-color: #f0f0f0;
+    border: 1px solid #dcdcdc;
+    border-radius: 4px;
+    margin: 10px;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+  }
+  
+  .custom-file-upload:hover {
+    background-color: #e0e0e0;
+  }
