--- a/client/src/styles/report_assistant.css
+++ b/client/src/styles/report_assistant.css
@@ -193,18 +193,18 @@
     color: var(--bs-primary);
 }
 
-.custom-file-upload {
+.import_export_button {
     display: inline-block;
     padding: 6px 12px;
     cursor: pointer;
     background-color: #f0f0f0;
     border: 1px solid #dcdcdc;
     border-radius: 4px;
-    margin: 10px;
+    margin: 0px;
     font-size: 16px;
     transition: background-color 0.3s ease;
   }
   
-  .custom-file-upload:hover {
+  .import_export_button:hover {
     background-color: #e0e0e0;
   }
